# metacontrol_knowrob

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  metacontrol.rosinstall  package.xml  setup.py
.github/workflows/: docker-publish.yml  test.yml  tests.yml
launch/: metacontrol.launch
scripts/: metacontrol.py
src/: __init__.pl  analyze.pl  plan.pl  tomasys_query.pl
src/metacontrol_knowrob/: prolog_query.py
test/: README.md  docker-compose.yml  test_rules.launch
test/owl/: catalog-v001.xml  test.owl
test/rules/: manual_test_rules.py  test_rules.py
