<?xml version="1.0"?>
<package format="3">
  <name>metacontrol_knowrob</name>
  <version>0.0.0</version>
  <description> The Metacontrol implementation with knowrob</description>

  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosprolog</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rosprolog</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rosprolog</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>knowrob</depend>

  <test_depend>python-pytest</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>ros_pytest</test_depend>

  <export>
  </export>
</package>
